# libbuttplug

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  appveyor.yml  travis_build.sh
cmake/: Findjson-c.cmake
example/: example.c
include/: bpws.h  bpws_lws.h  bpws_lws_main.h
src/: bpws.c  bpws_cbor.c  bpws_cbor.h  bpws_lws.c  bpws_lws_main.c
test/: test.c  test.h
